--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "brotli": "^1.3.3",
         "font-awesome": "^4.7.0",
         "gsap": "^3.12.5",
         "prop-types": "^15.8.1",
@@ -43,5 +44,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "compression-webpack-plugin": "^11.1.0"
     }
 }
