--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "brotli": "^1.3.3",
+        "ffmpeg": "^0.0.4",
+        "fluent-ffmpeg": "^2.1.3",
         "font-awesome": "^4.7.0",
         "gsap": "^3.12.5",
         "prop-types": "^15.8.1",
